# kenken

./: .gitignore  LICENSE  README.md  cageops.py  demo.py  kenken.py  puzlint.py  rowops.py  sample4-1.json  sample6-1.json  sample6-2.json  setup.cfg
.github/workflows/: pythonpackage.yml
kenken/: __init__.py  cageops.py  kenken.py  main.py  puzlint.py  rowops.py
sample/: 6-3.json  8-1.json
tests/: 4-1.json  6-1.json  6-2.json  6-3.json  8-1.json  test_kenken.py
