[metadata]
license_file = LICENSE
name = kenken
author = Scott Jespersen
description = KenKen solver
long_description = file:README.md
long_description_content_type = text/md
project_urls =
    kenken source = https://github.com/sdjespersen/kenken/

[options]
packages =
    kenken
python_requires = >=3.7

[flake8]
ignore = E306
